--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.13",
+    "body-parser": "^1.20.0",
     "concurrently": "^7.2.0",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.1",
     "nodemon": "^2.0.16"
   }
 }
